--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -47,6 +47,7 @@ booking_settings:
       title: La reserva empieza seleccionando
       dates: Las fechas
       categories: Los productos
+      shoppingcart: Carrito de la compra
     deposit: \% Depósito
     allow_total_payment: Permitir pagar el total de la reserva
     min_days: Numero mínimo de días    
@@ -164,7 +165,7 @@ new_booking:
   extras: Extras
   extra: Extra
   quantity: Cantidad
-  price: Precio
+  price: Precio unidad
   customer: Cliente
   conditions_confirm: He leído y acepto <a href="%1" target="_blank">las condiciones del alquiler</a>
   continue: Continuar
