--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -26,6 +26,9 @@ booking_settings:
     family: Product type
     custom_pickup_return_place: Custom pickup/return places
     custom_pickup_return_place_price: Custom pickup/return place price
+    no_pickup_return_timetable: It does not apply
+    pickup_return_timetable: Pickup/return timetable
+    pickup_return_timetable_out_price: Pickup/return out of time price    
     payment: Enable online payment
     general_group: General
     payment_group: Payment
@@ -53,6 +56,8 @@ booking_console:
   availability: Availability
   summary: Summary
   places: Pickup/return
+  calendars: Calendars
+  timetables: Timetables  
 booking_summary:
   title: Booking summary  
 booking_forecast:
@@ -143,8 +148,8 @@ new_booking:
   concept: Concept
   day: Day
   days: Days
-  time_from_cost: Pick up outside working hours
-  time_to_cost: Return outside working hours
+  time_from_cost: Pick up outside working hours supplement
+  time_to_cost: Return outside working hours supplement
   pickup_place_cost: Pick up place supplement
   return_place_cost: Return place supplement  
   total: Total
