--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -82,6 +82,7 @@ booking_payment_status:
   none: None
   deposit: Deposit
   total: Total
+  refunded: Refunded
 booking_items:
   car: car
   bike: bike
