--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -127,6 +127,7 @@ booking_payment_status:
   none: No cobrado
   deposit: Depósito
   total: Total  
+  refunded: Devuelto
 booking_items:
   car: coche
   bike: bicicleta
