--- a/i18n/ca.yml
+++ b/i18n/ca.yml
@@ -83,7 +83,8 @@ booking_status:
 booking_payment_status:
   none: No cobrat
   deposit: Depòsit
-  total: Total       
+  total: Total    
+  cancelled: Cancel.lat   
 booking_management:
   title: Gestió de reserves
   description: <p>Consultar les reseves.</p>
