--- a/i18n/ca.yml
+++ b/i18n/ca.yml
@@ -173,6 +173,8 @@ catalog_management:
       label: Selector
     product_family:
       label: Configuració
+    extras:
+      label: Extres
     code_required: Codi obligatori
 booking_category_management:
   table:
