--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -102,6 +102,7 @@ booking_console:
   summary: Resumen
   places: Entrega y recogida
   create_rates: Preparar tarifas
+  adjust_prices: Ajustar precios    
   calendars: Calendarios
   timetables: Horarios
 booking_summary:
