--- a/i18n/ca.yml
+++ b/i18n/ca.yml
@@ -56,6 +56,7 @@ booking_console:
   timetables: Horaris  
   receipts: Cobraments
   activities: Comandes  
+  information_requests: Solicituts informació  
 booking_summary:
   title: Resum reserves 
 booking_forecast:
