pickup/return bookings between dates + booking color

--- a/i18n/ca.yml
+++ b/i18n/ca.yml
@@ -325,6 +325,7 @@ not_assigned_bookings:
     dates: Dates
     customer: Client
     status: Estat  
+    color: Color
   form:  
     assign: Assignar
     reassign: Reassignar
